--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ dpkg (1.10.22) unstable; urgency=low
   * Add amd64 support. Closes: #238483, #241938.
   * Stop hardcoding the list of manual page languages in debian/rules,
     so we include Spanish, Russian and Brazilian Portugese.  Closes: #245994.
+  * Updated Translations:
+    - Spanish manpages (Ruben Porras).  Closes: #246158, #246159, #246160,
+      #246161, #246162, #246163.
 
  -- Scott James Remnant <scott@netsplit.com>  UNRELEASED
 
