--- a/man/es/dselect.8
+++ b/man/es/dselect.8
@@ -1,106 +1,432 @@
-.\" Hey, Emacs!  This is an -*- nroff -*- source file.
 .\" (c) 2003 Software in the Public Interest
-.\" Esta traducción ha sido realizada por Bruno Barrera C.
-.\" (bruno.barrera@igloo.cl) y revisada por Esteban Manchado Velázquez
-.\" (zoso@demiurgo.org) 
-.\" Está basada en la página de manual original:
-.\" versión 1.1 del CVS de /cvs/debian-doc/manpages/english/dpkg/dselect.8
+.\" Esta traduccin ha sido realizada por Bruno Barrera C.
+.\" (bruno.barrera@igloo.cl) y revisada por Esteban Manchado Velzquez
+.\" (zoso@demiurgo.org) y Rubn Porras (nahoo@inicia.es) 
+.\" Est basada en la pgina de manual original:
+.\" versin 1.2 del CVS de /cvs/debian-doc/manpages/english/dpkg/dselect.8
 
-.TH "DSELECT" "8" "Enero de 2000" "Proyecto Debian" "Debian GNU/Linux"
+.TH "DSELECT" "8" "Julio de 2001" "Proyecto Debian" "Debian GNU/Linux"
 .SH "NOMBRE"
 dselect \- Interfaz del manipulador de paquetes Debian para consola.
 .SH "SINOPSIS"
 .B dselect
 [\-\-admindir <directorio>] [\-\-help] [\-\-version] [\-\-licence | \-\-license]
-[\-\-expert] [\-\-debug <archivo> | \-D <archivo>] [\fI<acción>\fP]
-.SH "DESCRIPCION"
+[\-\-expert] [\-\-debug | \-D <archivo>] [\fI<accin>\fP]
+[\-\-colour | \-\-color [parte de la pantalla]:[primer plano],[fondo][:attr[+attr+..]]]
+.SH "DESCRIPCIN"
 .B dselect
-es la principal interfaz para la instalación, manejo y eliminación de paquetes
-Debian GNU/Linux. Es una interfaz de
-.B dpkg(8).
-Normalmente se llama a 
-.B dselect 
-sin parámetros, aunque hay algunos disponibles.
+es la principal interfaz para la instalacin, manejo y eliminacin de paquetes
+Debian GNU/Linux. En el men principal de \fBdselect\fP, el administrador del sistema puede:
+ \- Actualizar la lista de paquetes disponibles,
+ \- Ver el estado de los paquetes instalados y disponibles,
+ \- Alterar selecciones de paquetes y manejar las dependencias correspondientes,
+ \- Instalar nuevos paquetes o actualizarlos a nuevas versiones.
 .PP 
-El uso de 
 .B dselect 
-es muy intuitivo, e incluye un sistema interno de ayuda que describe las
-combinaciones de teclas y algunos conceptos generales.
-.I No olvide leer la ayuda.
-.SS USO
-.TP 
-.B Access
-Escoge el `método' de acceso usado para buscar los paquetes dentro de la
-base de datos.  Por omisión, existen bastantes métodos, como "floppy" (para
-disquetes), "harddisk" (para discos fijos) y "cdrom", pero se pueden instalar
-paquetes con metodos adicionales, como "apt", "multi_cd" , etc.
-.TP 
-.B Update
-Actualiza la lista de paquetes disponibles a dpkg/dselect desde el/los
-fichero(s) `Packages' de la base de datos elegida.
-.TP 
-.B Select
-Selecciona paquetes individuales para ser instalados.
-.TP 
-.B Install
-Instala los paquetes seleccionados.
-.TP 
-.B Config
-Configura cualesquiera paquetes no configurados todavía.
-.TP 
-.B Remove
-Borra o limpia los paquetes seleccionados.
-.TP 
-.B Quit
-Salir de dselect (satisfactoriamente).
+opera como interfaz de \fBdpkg(8)\fP, la herramienta gestora de paquetes de Debian de bajo nivel. 
+Su ventaja es que posee una pantalla completa de seleccin
+de paquetes con resolucin ptima de dependencias y conflictos.
+Cuando se ejecuta con permisos de administrador, los paquetes pueden ser instalados,
+actualizados o eliminados. Varios mtodos de acceso pueden ser configurados
+para saber las versiones disponibles e instalables desde los depsitos de paquetes correspondientes.
+Dependiendo del mtodo de acceso usado, esos depsitos de paquetes pueden ser
+pblicos en servidores a travs de Internet, redes locales o bien en cdroms.
+El mtodo de acceso recomendado es \fIapt\fP, proporcionado por el paquete \fBapt\fP.
+.PP 
+Normalmente \fBdselect\fP se invoca sin parmetros. 
+Se presenta un men interactivo, ofreciendo al usuario una lista de acciones.
+Si se da una accin como argumento, entonces ser ejecutada inmediatamente.
+Hay muchas rdenes disponibles para modificar el comportamiento de \fBdselect\fP
+o tambin para mostrar informacin adicional acerca del programa.
 .SH "OPCIONES"
-Todas las opciones pueden especificarse tanto en la línea de órdenes como
-en el fichero de configuración \fI/etc/dpkg/dselect.cfg\fP.  Cada línea del
-fichero de configuración es una opción (exactamente la misma que la de
-las opciones la línea de órdenes pero sin \-\-) o un comentario (si empieza
-con un \fB#\fR).
+Todas las opciones pueden ser especificadas en la lnea de rdenes, o bien 
+en el fichero de configuracin de \fBdselect\fP ubicado en \fI/etc/dpkg/dselect.cfg\fP.
+Cada lnea en el archivo de configuracin es tambin una opcin 
+(exctamente la misma que en la lnea de rdenes) o un comentario (si este comienza con un \fB#\fR).
 .br 
 .TP 
 .B \-\-admindir <directorio>
-Cambia el directorio donde se encuentran los ficheros `status', `available' y
-otros similares. Normalmente se ubican en
-.I /var/lib/dpkg
-y no debería haber ninguna necesidad de cambiarlo.
+Cambia el directorio donde el `estado', `disponible' y archivos similares de dpkg estn ubicados. 
+Esto por defecto est en \fI/var/lib/dpkg\fP
+y normalmente no debera cambiar.
 .TP 
-.B \-\-debug <archivo> | \-D <archivo>
-Activa el informe sobre posibles errores. Esta información se envía a
-.I <archivo>.
+.B \-\-debug <archivo> | \-D<archivo>
+Activa la depuracin. Esta informacin es enviada al \fI<archivo>\fP escogido.
 .TP 
 .B \-\-expert
-Activa el modo experto: no muestra ningún posible mensaje de ayuda. 
+Activa el modo experto, por ejemplo, no mensajes de ayuda posiblemente molestos.
+.TP 
+.B \-\-colour | \-\-color [parte de la pantalla]:[primer plano],[fondo][:attr[+attr+..]]]
+Configura los colores de la pantalla. Estos funcionan nicamente si en su equipo es posible mostrar colores. 
+Esta opcin puede ser usada cuantas veces se desee (es mejor usarla en \fIdselect.cfg\fP). 
+Cada uso cambia el color (y opcionalmente, otros atributos) de una parte de la pantalla.
+Estas partes de la pantalla (desde arriba hacia abajo) son:
+.RS
+.TP 
+.B title
+El ttulo de la pantalla.
+.TP 
+.B listhead
+La lnea de cabecera encima de la lista de paquetes.
+.TP 
+.B list
+La lista de paquetes (y tambin otros textos de ayuda).
+.TP 
+.B listsel
+El elemento seleccionado en la lista.
+.TP 
+.B pkgstate
+En la lista de paquetes, el texto que indica el estado actual de cada paquete.
+.TP 
+.B pkgstatesel
+En la lista de paquetes, el texto que indica el estado actual del paquete seleccionado.
+.TP 
+.B infohead
+La lnea de cabecera que muestra el estado del paquete seleccionado.
+.TP 
+.B infodesc
+La descripcin corta del paquete.
+.TP 
+.B info
+Usado para mostrar la informacin del paquete tal como la descripcin de l.
+.TP 
+.B infofoot
+La ltima lnea de la pantalla cuando se seleccionan paquetes.
+.TP 
+.B query
+Usado para mostrar lneas de pregunta.
+.TP 
+.B helpscreen
+Color de las pantallas de ayuda.
+.RE
+.P
+Luego de la parte de la pantalla, vienen dos puntos y la especificacin del color. 
+Usted puede especificar el color del primer plano, el color de fondo, 
+o ambos evitando los colores por defecto. Usted debe usar colores estndares de
+la biblioteca curses.
+.P
+Opcionalmente, luego de la especificacin de colores hay otros dos puntos, 
+y la especificacin de los atributos. sta es una lista de uno o ms atributos, separados por un signo ("+"). 
+Los atributos disponibles incluyen (no todos funcionarn en todos los terminales): 
+normal, standout, underline, reverse, blink, bright, dim, bold.
 .TP 
 .B \-\-help
-Muestra una breve ayuda sobre el programa.
+Muestra un breve texto de ayuda y termina el programa.
 .TP 
 .B \-\-licence | \-\-license
-Muestra el copyright y la licencia de dselect.
+Muestra en pantalla los derechos de copia de \fBdselect\fP, 
+la informacin con respecto a su licencia y termina el programa.
 .TP 
 .B \-\-version
-Muestra la versión de dselect.
-.SH "FALLOS"
-La interfaz de
+Muestra en pantalla la versin correspondiente y termina el programa.
+.SH "USO"
+Cuando
 .B dselect
-puede llegar a ser confusa y podría alarmar a un usuario nuevo.
+es iniciado interactivamente, muestra al usuario un men con las siguientes opciones disponibles:
+.SS access
+Selecciona y configura un mtodo de acceso para los depsitos de paquetes.
 .sp
-No se gestiona muy bien el campo "Recommends:", y no se gestiona en absoluto
-el "Replaces:".
+Por defecto, \fBdselect\fP proporciona una alta cantidad de mtodos tales como 
+\fIfloppy\fP, \fIharddisk\fP o \fIcdrom\fP, 
+aunque otros paquetes podran proporcionar ms an, ejemplo, el mtodo de acceso \fIapt\fP
+proporcionado por el paquete \fBapt\fP o bien \fImulti_cd\fP proporcionado por el paquete \fBdpkg\-multicd\fP.
 .sp
-No hay una manera fácil de bajar e instalar automáticamente los paquetes vía
-FTP anónimo con los métodos por omisión (APT sí puede).
-.SH "VEÁSE TAMBIÉN"
+El uso del mtodo de acceso va \fIapt\fP es altamente recomendado.
+.sp
+.SS update
+Actualiza la lista disponible de paquetes.
+.sp
+Obtiene una lista de versiones disponibles de paquetes desde un depsito de ellos, 
+configurado por el mtodo de acceso seleccionado, y actualiza la base de datos de dpkg. 
+La lista de paquetes es comnmente proporcionada por el depsito de paquetes, 
+mediante un archivo llamado \fBPackages\fP  \fBPackages.gz\fP.  
+Esos archivos pueden ser generados por los mantenedores de los depsitos de paquetes, 
+usando el programa \fBdpkg\-scanpackages(8)\fP.  
+.sp
+Los detalles de la accin de actualizar dependen del mtodo de acceso que se haya implementado. 
+Normalmente este proceso es automtico y no requiere interaccin del usuario.
+.sp
+.SS select
+Visualiza o maneja la seleccin de paquetes y sus respectivas dependencias.  
+.sp
+Esta es la principal funcin de \fBdselect\fP. 
+En la pantalla de seleccin, el usuario puede revisar una lista 
+de todos los paquetes disponibles e instalados. 
+Cuando se ejecuta con permisos de administrador, 
+tambin es posible cambiar el estado de la seleccin interactivamente. 
+\fBdselect\fP sigue esos cambios a otros paquetes dependientes o conflictivos.
+.sp
+Cuando hay un conflicto, o bien una dependencia falla, 
+se muestra la pantalla de resolucin de dependencias. 
+En esta pantalla, se muestra una lista de paquetes conflictivos o dependientes, 
+para cada paquete en la lista. El usuario puede aplicar las sugerencias entregadas por 
+\fBdselect\fP, evitarlas, o bien deshacer los cambios hechos, 
+incluyendo aquellos en los que de dejaron dependencias o conflictos sin resolver.
+.sp
+El uso de esta seleccin de paquetes interactiva con respecto al manejo de la pantalla 
+ser explicada ms abajo en el texto.
+.sp
+.SS install
+Instala los paquetes seleccionados.
+.sp
+El mtodo de acceso configurado descargar los paquetes instalables o actualizables 
+desde los depsitos relevantes, y los instalar usando \fBdpkg\fP.  
+Dependiendo de la implementacin del mtodo de acceso, todos los paquetes pueden ser 
+pre\-descargados antes de la instalacin, o bien cuando se requiera.
+Algunos mtodos de acceso podran borrar paquetes que fueron marcados para ser eliminados
+.sp
+Si ocurre algn error durante la instalacin, normalmente usted debera ejecutar la instalacin nuevamente. 
+En la mayora de los casos, los problemas desaparecern o bien sern resueltos.
+SI el problema persiste o la instalacin fue realizada de forma incorrecta, 
+por favor srvase a investigar las causas y circunstancias de el problema, 
+y contacte rpidamente al sistema de seguimiento de fallos de Debian. 
+Las instrucciones correspondientes pueden encontrarse en http://bugs.debian.org/
+o bien leyendo la documentacin de los programas \fBbug(1)\fP o \fBreportbug(1)\fP, 
+si es que estn instalados, obviamente.
+.sp
+Los detalles de la instalacin dependen de la implementacin de el mtodo de acceso. 
+La atencin completa del usuario puede ser requerida durante la instalacin, 
+configuracin o eliminacin de los paquetes correspondientes. 
+Esto depende exclusivamente de los scripts que posean los paquetes. 
+Algunos de ellos hacen uso de la biblioteca de \fBdebconf(8)\fP, 
+permitiendo de esta manera una instalacin mas flexible o tambin ms automatizada.
+.sp
+.SS config
+Configura cualquier paquete previamente instalado, que no este totalmente configurado.
+.sp
+.SS remove
+Elimina o purga (n.t. es decir, elimina los ficheros de configuracin) los
+paquetes instalados que estn marcados para este proceso.
+.sp
+.SS quit
+Salir de \fBdselect\fP
+.sp
+Termina el programa exitosamente (el cdigo de error devuelto ser 0).
+.sp
+.SH "Manejo de selecciones de paquetes"
+.sp
+.SS Introduccin
+.sp
+.B dselect 
+expone directamente al administrador algunas de las posibles complejidades 
+relacionadas con el manejo de una larga lista de paquetes con muchas dependencias. 
+Para un usuario que no est familiarizo con los conceptos y el manejo de paquetes que posee Debian, 
+este proceso podra ser un tanto complicado. Sin embargo \fBdselect\fP
+apunta a ser un programa de manejo y administracin fcil, 
+por lo mismo no podra ser considerado como un substituto de un administrador. 
+Se requiere que el usuario este familiarizado con algunos conceptos del sistema de paquetes de Debian. 
+En caso de dudas, consulte la pgina man de \fBdpkg(8)\fP y el manual de normas de Debian.
+.sp
+A menos que \fBdselect\fP sea ejecutado en modo experto
+o intermedio, se muestra una pantalla de ayuda cuando se selecciona esta accin desde el men. 
+Se aconseja \fIfervientemente\fP al usuario que estudie toda la informacin presentada en las pantallas de ayuda.
+La ayuda en lnea puede obtenerse en cualquier momento mediante la tecla \fB'?'\fP.
+.sp
+.SS Disposicin de la pantalla
+.sp
+La pantalla de seleccin es por defecto dividida en dos partes, superior e
+inferior.
+La parte de arriba muestra la lista de paquetes. Mediante el cursor se puede seleccionar
+un paquete individual, o un grupo de paquetes, si es que se puede, seleccionando la cabecera del grupo. 
+La parte de abajo de la pantalla muestra algunos de los detalles 
+del paquete seleccionado en la parte de arriba de la pantalla.
+El tipo de detalle mostrado puede variar.
+.sp
+Presionando la tecla \fB'I'\fP la lista de paquetes ser mostrada en pantalla completa,
+tambin una vista alargada de los detalles de los paquetes, o la pantalla igualmente dividida.
+.sp
+.SS Detalles de la vista de paquetes.
+.sp
+Por defecto se muestra una descripcin bastante extensa del paquete que esta seleccionado en la lista.
+El tipo de detalles puede ser cambiado presionando la tecla \fB'i'\fP.
+Las opciones posibles son:
+ \- la descripcin extendida
+ \- la informacin de control de la versin instalada
+ \- la informacin de control de la versin disponible
+.sp
+En la pantalla de resolucin de dependencias, existe la posibilidad de ver 
+los posibles problemas sin resolver, o los conflictos con respecto al paquete.
+.sh
+.SS Lista de estado de los paquetes
+.sp
+La pantalla principal muestra una lista de todos los paquetes conocidos por el
+sistema de manejo de paquetes de Debian.
+Esto incluye a los paquetes instalados en el sistema, y tambin los disponibles en los depsitos.
+.sp
+Para cada paquete, la lista muestra el estado, prioridad, seccin, 
+versin instalada y disponible, el nombre del paquete y su descripcin corta, todo esto en una sola lnea.
+Presionando la tecla \fB'V'\fP, se puede decidir si se desea mostrar la versin instalada y disponible. 
+Presionando la tecla \fB'v'\fP, se puede decidir si se desea mostrar 
+el estado del paquete, de forma breve o prolija.
+De forma breve, es la opcin por defecto.
+.sp
+El estado en forma breve consiste de cuatro partes:
+una parte de error, la cual normalmente debera estar vaca, el estado actual, 
+el estado de la ltima y actual seleccin.
+Las primeras dos estn en directa relacin con el estado actual del paquete, 
+el segundo par con las selecciones del usuario.
+.sp
+Aqu estn los significados de cada uno de los indicadores:
+ Parte de error: 
+  \fIvaco\fP   no hay error
+  \fBR\fP       error serio, necesita reinstalacin;
+ Estado de la instalacin:   
+  \fIvaco\fP   no est instalado;
+  \fB*\fP       totalmente instalado y configurado;
+  \fB\-\fP      no est instalado, pero an existen archivos de configuracin;
+  \fBU\fP       desempaquetado, pero an no configurado;
+  \fBC\fP       medio\-configurado (ocurri un error);
+  \fBI\fP       medio\-instalado (ocurri un error).
+ Seleccin actual y solicitada:
+  \fB*\fP       marcado para instalacin o actualizacin;
+  \fB\-\fP      marcado para ser eliminado, no se eliminan ficheros de configuracin;
+  \fB=\fP       bloqueado: el paquete no ser procesado en absoluto;
+  \fB_\fP       paquete marcado para purgacin, tambin elimina configuracin;
+  \fBn\fP       paquete es nuevo y an todava necesita ser marcado.
+.sp
+.SS Movimiento del cursor y de la pantalla
+.sp
+La lista de seleccin de paquetes y la pantalla de resolucin de 
+dependencias y conflictos pueden ser navegadas usando las siguientes teclas:
+.br 
+  \fBp, Up, k\fP           mueve el cursor hacia arriba
+  \fBn, Down, j\fP         mueve el cursor hacia abajo
+  \fBP, Pgup, Backspace\fP mueve la lista una pgina hacia arriba
+  \fBN, Pgdn, Space\fP     mueve la lista una pgina hacia abajo
+  \fB^p\fP                 mueve la lista una lnea hacia arriba
+  \fB^n\fP                 mueve la lista una lnea hacia abajo
+  \fBt, Home\fP            salta al principio de la lista
+  \fBe, End\fP             salta al fin de la lista
+  \fBu\fP                  mueve info una pgina hacia arriba
+  \fBd\fP                  mueve info una pgina hacia abajo
+  \fB^u\fP                 mueve info una lnea hacia abajo
+  \fB^d\fP                 mueve info una lnea hacia abajo
+  \fBB, Left\-arrow\fP     exhibe la pantalla 1/3 hacia la izquierda
+  \fBF, Right\-arrow\fP    exhibe la pantalla 1/3 hacia la derecha
+  \fB^b\fP                 exhibe un carcter hacia la izquierda
+  \fB^f\fP                 exhibe un carcter hacia la derecha
+.sp
+.SS Buscando y clasificando
+.sp
+Los paquetes en la lista pueden ser buscados por el nombre.
+Esto se realiza presionando la tecla \fB'/'\fP, y escribiendo el nombre del paquete
+que se desea buscar. Este nombre es interpretado como una una expresin regular
+de acuerdo con
+.BR regex (7).
+
+Si usted aade \fB'/d'\fP a la bsqueda, dselect adems buscar
+en las descripciones. Si usted aade \fB'/i'\fP la bsqueda no discriminar entre
+maysculas y minsculas. 
+Usted puede combinar estas dos opciones de esta manera : \fB'/id'\fP.
+Se puede repetir la bsqueda presionando las teclas \fB'n'\fP o \fB'\\'\fP,
+hasta que usted encuentre el paquete que estaba buscando.
+Si la bsqueda comienza al final de la lista, subir al principio y tambin revisar all.
+.sp
+El orden de la lista puede cambiarse presionando las teclas \fB'o'\fP y \fB'O'\fP repetidamente.
+Los siguientes ordenamientos son posibles:
+ alfabtico        disponible          	 estado
+ prioridad+seccin disponible+prioridad  estado+prioridad
+ seccin+prioridad disponible+seccin    estado+seccin
+.br 
+Si no se usa explcitamente ninguno de los mencionados arriba, se usa el orden
+alfabtico.
+.sp
+.SS Alterando selecciones.
+.sp
+El estado de la seleccin solicitada de paquetes individuales puede ser alterada 
+mediante los siguientes comandos:
+  \fB+, Insert\fP    instala o actualiza
+  \fB=, H\fP         bloqueo en estado y versin actual
+  \fB:, G\fP         sin espera: actualiza o deja sin instalar  
+  \fB\-, Delete\fP   elimina, pero deja la configuracion
+  \fB_\fP            elimina y borra la configuracin
+.sp
+Cuando los cambios resultan en una o ms dependencias no satisfechas, o tambin en conflictos
+\fBdselect\fP muestra al usuario una pantalla con resolucin de dependencias
+Esta pantalla ser explicada en detalles mas abajo.
+.sp
+Tambin es posible aplicar esas rdenes a grupos de selecciones de paquetes,
+apuntando el cursor a la cabecera del grupo. 
+El agrupamiento exacto de los paquetes depende la configuracin de la lista ordenamiento.
+.sp
+Se debe tomar el cuidado apropiado cuando se alteran largas listas de selecciones de 
+paquetes mediante grupos, ya que esto puede inmediatamente 
+crear una larga lista de dependencias sin resolver o conflictos con otros paquetes, 
+todos ellos sern mostrados en una pantalla nica, 
+lo que har ms difcil el proceso. 
+En la prctica, es mejor dejar en espera algunos grupos e ir trantndolos uno a uno.
+.sp
+.SS Resolviendo problemas de dependencias y conflictos.
+.sp
+Cuando el cambio resulta en una o ms dependencias sin resolver o tambin en conflictos, \fBdselect\fP
+muestra al usuario una pantalla con la posible solucin al problema. 
+Primero, sin embargo, se muestra una pantalla informativa. 
+.sp
+La mitad superior de esta pantalla enumera todos los paquetes que tendrn conflictos, o problemas de 
+dependencias sin resolver, como resultado del cambio requerido por el usuario,
+adems de todos los paquetes cuya instalacin solucionar el problema.
+La mitad inferior muestra los problemas que causa el paquete seleccionado.
+.sp
+Cuando la sublista de paquete se exhibe inicialmente, \fBdselect\fP
+podra ya haber establecido el estado requerido de alguno de los paquetes
+listados, para resolver los problemas de dependencias o conflictos
+que la pantalla de resolucin mostrado.
+Usualmente, lo mejor es seguir las sugerencias hechas por \fBdselect\fP.
+.sp
+El estado de los paquetes seleccionados en la lista, puede ser revertido a los ajustes originales,
+as como tambin las dependencias sin resolver y los conflictos que fueron creados, 
+presionando la tecla \fB'R'\fP. Presionando la tecla \fB'D'\fP,
+las sugerencias automticas son reajustadas, pero el cambio que realiz la pantalla de 
+resolucin de dependencias se mantiene.
+Finalmente, presionando la tecla \fB'U'\fP, las selecciones son ajustadas nuevamente a los 
+valores automticos.
+.sp
+.SS Estableciendo las selecciones solicitadas
+.sp
+Presionando la tecla \fBenter\fP, la lista actual es aceptada.
+Si \fBdselect\fP detecta que no hay problemas, las nueves selecciones sern aceptadas.
+Sin embargo, si hay dependencias sin resolver, \fBdselect\fP nuevamente mostrar 
+la pantalla de resolucin de dependencias.
+.sp
+Para alterar una lista de selecciones que crea dependencias sin resolver o
+conflictos y forzar a \fBdselect\fP a aceptarla, presione la tecla \fB'Q'\fP. 
+Esto fija las selecciones especificadas por el usuario, incondicionalmente.
+Generalmente, usted no debera hacer esto, a menos que sepa lo que este haciendo.
+.sp
+El efecto opuesto, es deshacer sus cambios y volver hacia atrs hasta que no tenga problemas,
+esto se puede realizar presionando la tecla \fB'X'\fP  \fBescape\fP.
+Presionando repetidamente estas teclas, cualquier cambio perjudicial a las selecciones 
+de paquetes se puede retirar totalmente, volviendo as a la ltima configuracin
+existente.
+.sp
+.SH "FALLOS"
+La interfaz de seleccin de
+.B dselect
+puede parecer confusa para algunos usuarios principiantes.
+Se ha informado, que incluso experimentados desarrolladores del kernel se han
+quejado.
+.sp
+Carece de documentacin
+.sp
+No hay ninguna opcin de ayuda en el men principal.
+.sp
+La lista de paquetes disponibles no puede ser reducida.
+.sp
+Los otros mtodos de acceso no tienen tanta calidad como el mtodo que proporciona apt, no implica que los otros no funcionen, sino que este ltimo es mucho mas flexible, lo cual lo hace ser mucho mas recomendable.
+.SH "VESE TAMBIN"
 .BR dpkg (8),
-.BR deb (5).
+.BR apt\-get (8),
+.BR sources.list (5),
+.BR deb (5) y
+el manual de normas de Debian.
 .SH "AUTORES"
 .B dselect
-fue escrito por Ian Jackson (ijackson@gnu.ai.mit.edu). 
-La lista completa de contribuciones puede verse escribiendo `dselect
-\-\-license'.
+fue escrito por (ijackson@gnu.ai.mit.edu). La lista entera de
+contribuidores puede ser leda ejecutando `dselect \-\-license'.
 .br 
-Esta página man fue escrita por Juho Vuori <javuori@cc.helsinki.fi> y
-actualizada por Josip Rodin.  Traducción realizada por Bruno Barrera C.
-(bruno.barrera@igloo.cl).
+Este manual fue escrito por Juho Vuori <javuori@cc.helsinki.fi >,
+Josip Rodin, Joost kooij y finalmente traducida por Bruno Barrera C. 
+.br 
+<bruno.barrera@igloo.cl>
+
+
