Correct a bad option in dpkg.8

--- a/main/dpkg.8
+++ b/main/dpkg.8
@@ -91,7 +91,7 @@ unless forced to do that with option \fB--force-hold\fP.
 .B reinst-required
 A package marked \fBreinst-required\fP is broken and requires
 reinstallation. These packages cannot be removed, unless forced with
-option \fB--force-reinstreq\fP.
+option \fB--force-remove-reinstreq\fP.
 
 .SH ACTIONS
 .TP
