Add support for the new Hurd-style i386-gnu triplets; rather than hacking this onto the Linux support, I'm deliberately doing it separately so when they change it again, we don't have to unbreak things.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Apr 27 19:47:37 BST 2004 Scott James Remnant <scott@netsplit.com>
+
+  * scripts/dpkg-architecture.pl (rewrite_gnu): Add a new regexp for
+  parsing i386-gnu style triplets on the Hurd.
+
 Tue Apr 27 19:23:01 BST 2004 Scott James Remnant <scott@netsplit.com>
 
   * main/dpkg.8: Correct reference to non-existant --force-reinstreq
