--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dpkg (1.10.22) unstable; urgency=low
 
   * Add amd64 support. Closes: #238483, #241938.
+  * Add i?86-gnu support.  Closes: #216695, #236331.
   * Stop hardcoding the list of manual page languages in debian/rules,
     so we include Spanish, Russian and Brazilian Portugese.  Closes: #245994.
   * Correct dpkg manpage to refer to --force-remove-reinstreq instead of
