Add new Spanish manpage.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Apr 27 21:49:25 BST 2004 Ruben Porras <nahoo82@telefonica.net>
+
+  * man/es/dpkg-scansources.8: Added Spanish manpage.
+  * man/es/Makefile.in: Install it.
+
 Tue Apr 27 19:47:37 BST 2004 Scott James Remnant <scott@netsplit.com>
 
   * scripts/dpkg-architecture.pl (rewrite_gnu): Add a new regexp for
