--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ dpkg (1.10.22) unstable; urgency=low
   * Updated Translations:
     - Spanish manpages (Ruben Porras).  Closes: #246158, #246159, #246160,
       #246161, #246162, #246163.
+  * New Translations:
+    - Spanish dpkg-scansources manpage (Ruben Porras).  Closes: #246164.
 
  -- Scott James Remnant <scott@netsplit.com>  UNRELEASED
 
