Various low-hanging documentation updates.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+Thu May 6 23:23:10 BST 2004 Scott James Remnant <scott@netsplit.com>
+
+  * utils/md5sum.1, man/es/md5sum.1, man/de/md5sum.1, men/ja/md5sum.1:
+  Correct "et al" to "et al."
+  * main/main.c, man/en/dpkg.8.sgml: Correct description of
+  --compare-versions command to describe versions as "empty" rather
+  than "missing" or "no version" as "" has to be passed.
+  * man/en/dpkg.8.sgml: Add dpkg-reconfigure(8) to SEE ALSO section.
+  * utils/start-stop-daemon.8: Move documentation of --retry to the
+  paragraph about --stop where it belongs.
+  * scripts/update-alternatives.8: Remove strange &quot; usage and
+  replace with appropriate .BR.
+
 Sun May  2 10:22:25 CEST 2004 Tollef Fog Heen <tfheen@debian.org>
 
   * scripts/dpkg-scanpackages.pl: Give proper case for Origin and
