--- a/debian/changelog
+++ b/debian/changelog
@@ -2,14 +2,21 @@ dpkg (1.10.22) unstable; urgency=low
 
   * Add amd64 support. Closes: #238483, #241938.
   * Add i?86-gnu support.  Closes: #216695, #236331.
-  * Stop hardcoding the list of manual page languages in debian/rules,
-    so we include Spanish, Russian and Brazilian Portugese.  Closes: #245994.
-  * Correct dpkg manpage to refer to --force-remove-reinstreq instead of
-    non-existant --force-reinstreq option.  Closes: #232831.
   * Fix dpkg-source (actually controllib.pl) to output the field name
     properly again.  Closes: #246595.
   * Make dpkg-scanpackages output Origin and Bugs fields with proper
     casing.  Closes: #154422.
+  * Stop hardcoding the list of manual page languages in debian/rules,
+    so we include Spanish, Russian and Brazilian Portugese.  Closes: #245994.
+  * Correct dpkg manpage to refer to --force-remove-reinstreq instead of
+    non-existant --force-reinstreq option.  Closes: #232831.
+  * Correct usage of "et al" to "et al.".  Closes: #230751.
+  * Correct documentation of --compare-versions arguments.  Closes: #232317.
+  * Correct documentation of start-stop-daemon manpage to refer to --retry
+    alongside --stop.  Closes: #204691.
+  * Correct invalid use of &quot; within update-alternatives(8) with .BR.
+    Closes: #244624.
+  * Add dpkg-reconfigure(8) to SEE ALSO section of dpkg(8).  Closes: #233282.
   * Updated Translations:
     - Catalan (Jordi Mallach).
     - Spanish manpages (Ruben Porras).  Closes: #246158, #246159, #246160,
