--- a/man/es/md5sum.1
+++ b/man/es/md5sum.1
@@ -1,5 +1,5 @@
 .\" Hey, Emacs!  This is an -*- nroff -*- source file.
-.TH MD5SUM 1 "29 de Noviembre de 1995" "Lankester et al" "Debian GNU/Linux"
+.TH MD5SUM 1 "29 de Noviembre de 1995" "Lankester et al." "Debian GNU/Linux"
 .SH NOMBRE
 md5sum \- genera o comprueba las sumas de control MD5
 
