--- a/scripts/update-alternatives.8
+++ b/scripts/update-alternatives.8
@@ -233,7 +233,9 @@ There are several packages which provide a text editor compatible
 with
 .BR vi ,
 for example
-.BR nvi &quot; and &quot; vim .
+.BR nvi
+and
+.BR vim .
 Which one is used is controlled by the link group
 .BR vi ,
 which includes links for the program itself and the associated manpage.
