--- a/utils/start-stop-daemon.8
+++ b/utils/start-stop-daemon.8
@@ -42,11 +42,7 @@ instance, using either the executable specified by
 Any arguments given after
 .BR --
 on the command line are passed unmodified to the program being
-started.  If
-.B --retry
-is specified then 
-.B start-stop-daemon
-will check that the process(es) have terminated.
+started.
 
 With 
 .BR --stop ,
@@ -62,7 +58,11 @@ If such a process does not exist,
 exits with error status 1
 (0 if
 .BR --oknodo
-is specified).
+is specified).  If
+.B --retry
+is specified then 
+.B start-stop-daemon
+will check that the process(es) have terminated.
 
 .SH OPTIONS
 
