--- a/man/de/md5sum.1
+++ b/man/de/md5sum.1
@@ -1,6 +1,6 @@
 .\" Hey, Emacs!  This is an -*- nroff -*- source file.
 .hw ge-knackt
-.TH MD5SUM 1 "29. November 1995" "Lankester et al" "Debian GNU/Linux"
+.TH MD5SUM 1 "29. November 1995" "Lankester et al." "Debian GNU/Linux"
 .SH NAME
 md5sum \- generiert oder überprüft MD5-Prüfsummen
 
