--- a/utils/md5sum.1
+++ b/utils/md5sum.1
@@ -1,5 +1,5 @@
 .\" Hey, Emacs!  This is an -*- nroff -*- source file.
-.TH MD5SUM 1 "29th November 1995" "Lankester et al" "Debian GNU/Linux"
+.TH MD5SUM 1 "29th November 1995" "Lankester et al." "Debian GNU/Linux"
 .SH NAME
 md5sum \- generates or checks MD5 message digests
 
