New German manpage.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu May 6 23:39:59 BST 2004 Helge Kreutzmann <kreutzm@itp.uni-hannover.de>
+
+  * man/de/Makefile.in: Install update-alternatives.8
+  * man/de/update-alternatives.8: Translated into German.
+
 Thu May 6 23:23:10 BST 2004 Scott James Remnant <scott@netsplit.com>
 
   * utils/md5sum.1, man/es/md5sum.1, man/de/md5sum.1, men/ja/md5sum.1:
