--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,7 @@ dpkg (1.10.22) unstable; urgency=low
     - Spanish manpages (Ruben Porras).  Closes: #246158, #246159, #246160,
       #246161, #246162, #246163.
   * New Translations:
+    - German update-alternatives manpage (Helge Kreutzmann).  Closes: #247116.
     - Spanish dpkg-scansources manpage (Ruben Porras).  Closes: #246164.
 
  -- Scott James Remnant <scott@netsplit.com>  UNRELEASED
