Correct dselect key-press documentation.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu May 6 23:44:55 BST 2004 Colin Watson <cjwatson@debian.org>
+
+  * dselect/helpmsgs.cc: Pressing 'n' repeats the last search, not
+  moves down; pressing 'p' does nothing.
+
 Thu May 6 23:39:59 BST 2004 Helge Kreutzmann <kreutzm@itp.uni-hannover.de>
 
   * man/de/Makefile.in: Install update-alternatives.8
