Fix very silly segfault.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu May 6 23:50:17 BST 2004 Daniel Kobras <kobras@debian.org>
+
+  * main/enquiry.c: Remove dereference of unitialised and unused pointer
+  variable, fixing segfault on when "gcc -dumpmachine" returns a
+  non-matching triplet.
+
 Thu May 6 23:44:55 BST 2004 Colin Watson <cjwatson@debian.org>
 
   * dselect/helpmsgs.cc: Pressing 'n' repeats the last search, not
