--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ dpkg (1.10.22) unstable; urgency=low
     properly again.  Closes: #246595.
   * Make dpkg-scanpackages output Origin and Bugs fields with proper
     casing.  Closes: #154422.
+  * Fix segfault when "gcc -dumpmachine" returns a non-matching triplet.
+    Closes: #211850.
   * Correct 'n' and 'p' key descriptions in dselect help message.
     Closes: #120562.
   * Stop hardcoding the list of manual page languages in debian/rules,
