Remove restriction that package names be at least two characters long.

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ dpkg (1.10.22) unstable; urgency=low
   * Fix segfault when "gcc -dumpmachine" returns a non-matching triplet.
     Closes: #211850.
   * Add support for DOS line-endings to md5sum.  Closes: #246103.
+  * Remove restriction that package names be at least two characters long.
+    Closes: #237734.
   * Correct 'n' and 'p' key descriptions in dselect help message.
     Closes: #120562.
   * Stop hardcoding the list of manual page languages in debian/rules,
