--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri May 7 00:04:28 BST 2004 Scott James Remnant <scott@netsplit.com>
+
+  * lib/parsehelp.c, scripts/dpkg-source.pl, scripts/cl-debian.pl: Remove
+  restriction that package names be at least two characters long.
+
 Thu May 6 23:57:52 BST 2004 Andrew Shugg <andrew@neep.com.au>
 
   * utils/md5sum.c: Add support for DOS line-endings (\r\n).
