Updated French translation.

--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,7 @@ dpkg (1.10.22) unstable; urgency=low
   * Add dpkg-reconfigure(8) to SEE ALSO section of dpkg(8).  Closes: #233282.
   * Updated Translations:
     - Catalan (Jordi Mallach).
+    - French (Christian Perrier).  Closes: #246359.
     - Spanish manpages (Ruben Porras).  Closes: #246158, #246159, #246160,
       #246161, #246162, #246163.
   * New Translations:
