--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri May 7 00:39:01 BST 2004 Christian Perrier <bubulle@debian.org>
+
+  * po/fr.po: Updated French translation.
+
 Fri May 7 00:04:28 BST 2004 Scott James Remnant <scott@netsplit.com>
 
   * lib/parsehelp.c, scripts/dpkg-source.pl, scripts/cl-debian.pl: Remove
