Now that d-i installs aptitude as well as dselect, we can suggest that as well.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri May 7 00:42:44 BST 2004 Scott James Remnant <scott@netsplit.com>
+
+  * main/main.c: Suggest 'aptitude' as well as 'dselect' now that
+  d-i installs it.
+
 Fri May 7 00:39:01 BST 2004 Christian Perrier <bubulle@debian.org>
 
   * po/fr.po: Updated French translation.
