Suggest fakeroot for dpkg-source -r.

--- a/scripts/dpkg-source.1
+++ b/scripts/dpkg-source.1
@@ -569,7 +569,7 @@ should not contain spaces or any other shell metacharacters.
 .\" what happens, if it contains spaces? (hs)
 .I gain-root-command
 might typically be
-.BR sudo ", " super " or " really .
+.BR fakeroot ", " sudo ", " super " or " really .
 .B su
 is not suitable, since it requires a
 .B -c
