--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri May 7 00:47:39 BST 2004 Geoff Richards <qef@rosies-dumplings.co.uk>
+
+  * scripts/dpkg-source.1: Suggest 'fakeroot' for the dpkg-source -r command.
+
 Fri May 7 00:42:44 BST 2004 Scott James Remnant <scott@netsplit.com>
 
   * main/main.c: Suggest 'aptitude' as well as 'dselect' now that
