--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,7 @@ dpkg (1.10.22) unstable; urgency=low
     Closes: #244624.
   * Add dpkg-reconfigure(8) to SEE ALSO section of dpkg(8).  Closes: #233282.
   * Suggest aptitude as well as dselect.  Closes: #217042.
+  * Suggest fakeroot for dpkg-source -r.  Closes: #175897.
   * Updated Translations:
     - Catalan (Jordi Mallach).
     - French (Christian Perrier).  Closes: #246359.
