Mention dselect update while talking about dpkg --update-avail.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri May 7 00:55:39 BST 2004 Scott James Remnant <scott@netsplit.com>
+
+  * man/en/dpkg.8.sgml: Document dselect update alongside --update-avail.
+
 Fri May 7 00:47:39 BST 2004 Geoff Richards <qef@rosies-dumplings.co.uk>
 
   * scripts/dpkg-source.1: Suggest 'fakeroot' for the dpkg-source -r command.
