Document what packages provide additional functionality that the user may be looking for.

--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,8 @@ dpkg (1.10.22) unstable; urgency=low
   * Suggest fakeroot for dpkg-source -r.  Closes: #175897.
   * Suggest dselect update in description of dpkg --update-avail.
     Closes: #206163.
+  * Suggest packages that provide additional functionality in the dpkg
+    manpage.  Closes: #81355.
   * Updated Translations:
     - Catalan (Jordi Mallach).
     - French (Christian Perrier).  Closes: #246359.
