--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri May 7 01:13:36 BST 2004 Scott James Remnant <scott@netsplit.com>
+
+  * man/en/dpkg.8.sgml: Add a new Additional Functionality section at the
+  bottom where we can refer readers to other packages that provide the
+  functionality they may be looking for.  Suggest aptitude and debsums.
+
 Fri May 7 00:55:39 BST 2004 Scott James Remnant <scott@netsplit.com>
 
   * man/en/dpkg.8.sgml: Document dselect update alongside --update-avail.
