Fix a large collection of low-hanging-fruit documentation corrections to clean up the bug list somewhat.

--- a/debian/changelog
+++ b/debian/changelog
@@ -21,15 +21,29 @@ dpkg (1.10.22) unstable; urgency=low
   * Correct documentation of --compare-versions arguments.  Closes: #232317.
   * Correct documentation of start-stop-daemon manpage to refer to --retry
     alongside --stop.  Closes: #204691.
+  * Correct documentation of dpkg-query --list.  Closes: #232639.
   * Correct invalid use of &quot; within update-alternatives(8) with .BR.
     Closes: #244624.
+  * Correct documentation of start-stop-daemon.  Closes: #41554, #211856.
+  * Correct documentation of dpkg-statoverride --update.  Closes: #85079.
+  * Correct documentation of update-alternatives --install.  Closes: #179648.
+  * Correct various typos.  Closes: #219623, #221235.
+  * Correct hyphen characters in manpages.  Closes: #212284, #247086, #226800.
   * Add dpkg-reconfigure(8) to SEE ALSO section of dpkg(8).  Closes: #233282.
+  * Add --force-bad-verify to dpkg manpage.  Closes: #192812.
+  * Add note that start-stop-daemon will chdir("/") unless -d is specified.
+    Closes: #217823, #218060.
   * Suggest aptitude as well as dselect.  Closes: #217042.
   * Suggest fakeroot for dpkg-source -r.  Closes: #175897.
   * Suggest dselect update in description of dpkg --update-avail.
     Closes: #206163.
   * Suggest packages that provide additional functionality in the dpkg
     manpage.  Closes: #81355.
+  * Remove obsolete references to the Debian Packaging Manual.
+    Closes: #122910, #140695.
+  * Replace "&c." with the slightly clearer "etc.".  Closes: #235773.
+  * Rewrite description of dpkg-source -i to indicate the intent of the
+    default setting rather than the exact exclusions.  Closes: #227169.
   * Updated Translations:
     - Catalan (Jordi Mallach).
     - French (Christian Perrier).  Closes: #246359.
