--- a/scripts/dpkg-checkbuilddeps.1
+++ b/scripts/dpkg-checkbuilddeps.1
@@ -1,8 +1,8 @@
-.TH DPKG-CHECKBUILDDEPS 1 "February 2001" "Debian project" "dpkg utililties"
+.TH DPKG\-CHECKBUILDDEPS 1 "February 2001" "Debian project" "dpkg utililties"
 .SH NAME
-dpkg-checkbuilddeps -- check build dependencies and conflicts
+dpkg\-checkbuilddeps - check build dependencies and conflicts
 .SH SYNOPSIS
-\fBdpkg-checkbuilddeps\fR -B [\fIcontrol-file\fR]
+\fBdpkg\-checkbuilddeps\fR \-B [\fIcontrol-file\fR]
 .SH DESCRIPTION
 This program checks the installed packages in the system against the build
 dependencies and build conflicts listed in the control file.  If any are
@@ -12,7 +12,7 @@ By default, \fBdebian/control\fR is read, but an alternate control filename
 may be specified on the command line.
 .SH OPTIONS
 .TP
-.I -B
+.I \-B
 Ignore Build-Depends-Indep lines. Use when no arch-indep packages will be
 built.
 .SH AUTHOR
