--- a/scripts/dpkg-name.1
+++ b/scripts/dpkg-name.1
@@ -4,14 +4,14 @@
 .\" This is free software; see the GNU General Public Licence version 2
 .\" or later for copying conditions.  There is NO warranty.
 .\" Time-stamp: <96/05/03 14:00:06 root>
-.TH dpkg-name 1 "May 1996" "Debian Project" "dpkg utilities"
+.TH dpkg\-name 1 "May 1996" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-name \- rename Debian packages to full package names
 .SH SYNOPSIS
 .B dpkg\-name 
 [\-a|\-\-no\-architecture] [\-o|\-\-overwrite] [\-s|\-\-subdir [dir]]
 [\-c|\-\-create\-dir] [\-h|\-\-help] [\-v|\-\-version]
-[\-l|\-\-license] [\-k|\-\-symlink] [\-[--] [files]
+[\-l|\-\-license] [\-k|\-\-symlink] [\-[\-\-] [files]
 .SH DESCRIPTION
 .PP
 This manual page documents the
@@ -25,23 +25,23 @@ the mainstream version information optionally followed by a hyphen and
 the revision information.
 .SH EXAMPLES
 .TP
-.B dpkg-name bar-foo.deb
-The file `bar-foo.deb' will be renamed to bar-foo_1.0-2_i386.deb or
+.B dpkg\-name bar\-foo.deb
+The file `bar\-foo.deb' will be renamed to bar\-foo_1.0\-2_i386.deb or
 something similar (depending on whatever information is in the control
-part of `bar-foo.deb').
+part of `bar\-foo.deb').
 .TP
 .B find /root/debian/ \-name '*.deb' | xargs \-n 1 dpkg\-name \-a
 All files with the extension `deb' in the directory /root/debian and its
 subdirectory's will be renamed by dpkg\-name if required into names with no
 architecture information.
 .TP
-.B find -name '*.deb' | xargs \-n 1 dpkg-name -a -o -s -c
+.B find \-name '*.deb' | xargs \-n 1 dpkg\-name \-a \-o \-s \-c
 .B Don't do this.
 Your archive will be messed up completely because a lot of packages
 don't come with section information.
 .B Don't do this.
 .TP
-.B dpkg --build debian-tmp && dpkg-name -o -s .. debian-tmp.deb
+.B dpkg \-\-build debian\-tmp && dpkg\-name \-o \-s .. debian\-tmp.deb
 This can be used when building new packages.
 .SS OPTIONS
 .TP
@@ -60,11 +60,11 @@ Files will be moved into subdir. If directory given as argument exists
 the files will be moved into that direcotory otherswise the name of
 the target directory is extracted from the section field in the
 control part of the package. The target directory will be
-`unstable/binary-<architecture>/<section>'. If the section is
+`unstable/binary\-<architecture>/<section>'. If the section is
 `non-free', `contrib' or no section information is found in the
 control file the target directory is
-`<section>/binary-<architecture>'. The section field isn't required so
-a lot of packages will find their way to the `no-section' area. Use
+`<section>/binary\-<architecture>'. The section field isn't required so
+a lot of packages will find their way to the `no\-section' area. Use
 this option with care, it's messy.
 .TP
 .B "\-c, \-\-create\-dir"
@@ -83,20 +83,20 @@ Print copyright information and (a reference to GNU) license
 information and exit successfully.
 .SH BUGS
 Some packages don't follow the name structure
-<package>_<version>_<architecture>.deb. Packages renamed by dpkg-name
+<package>_<version>_<architecture>.deb. Packages renamed by dpkg\-name
 will follow this structure. Generally this will have no impact on how
 packages are installed by dselect/dpkg, but other installation tools
 might depend on this naming structure.
 .SH SEE ALSO
 .BR deb (5),
-.BR deb-control (5),
+.BR deb\-control (5),
 .BR dpkg (8),
-.BR dpkg-deb (1),
+.BR dpkg\-deb (1),
 .BR find (1),
 .BR xargs (1).
 .SH COPYRIGHT
 Copyright 1995,1996 Erick Branderhorst.
-.B dpkg-name
+.B dpkg\-name
 is free software; see the GNU General Public Licence version 2 or
 later for copying conditions. There is
 .B no
