--- a/main/dpkg-query.8
+++ b/main/dpkg-query.8
@@ -3,18 +3,18 @@
 dpkg\-query \- a tool to query the dpkg database
 
 .SH SYNOPSIS
-.B dpkg-query
+.B dpkg\-query
 
 .SH DESCRIPTION
-\fBdpkg-query\fP is a tool to show information about packages listed in
+\fBdpkg\-query\fP is a tool to show information about packages listed in
 the \fBdpkg\fP database.
 
 
 .SH COMMANDS
 .TP
-\fB-l\fP | \fB--list\fP \fIpackage-name-pattern\fP ...
+\fB\-l\fP | \fB\-\-list\fP \fIpackage-name-pattern\fP ...
 List packages matching given pattern. If no \fIpackage-name-pattern\fP
-is given, list all packages in \fI/var/lib/dpkg/available\fP.  Normal
+is given, list all packages in \fI/var/lib/dpkg/status\fP.  Normal
 shell wildchars are allowed in \fIpackage-name-pattern\fP. Please note
 you will probably have to quote \fIpackage-name-pattern\fP to prevent
 the shell from performing filename expansion. For example this will
@@ -22,47 +22,47 @@ list all package names starting with \*(lqlibc5\*(rq:
 
 .T
 .nf
-  \fBdpkg-query -l 'libc5*'\fP
+  \fBdpkg\-query \-l 'libc5*'\fP
 .fi
 .TP
-\fB-W\fP | \fB--show\fP \fIpackage-name-pattern\fP ...
-Just like the \fB--list\fP option this will list all packages matching
+\fB\-W\fP | \fB\-\-show\fP \fIpackage-name-pattern\fP ...
+Just like the \fB\-\-list\fP option this will list all packages matching
 the given pattern. However the output can be customized using the
-\fB--showformat\fP option.
+\fB\-\-showformat\fP option.
 .TP
-\fB-s\fP | \fB--status\fP \fIpackage-name\fP ...
+\fB\-s\fP | \fB\-\-status\fP \fIpackage-name\fP ...
 Report status of specified package. This just displays the entry in
 the installed package status database.
 .TP
-\fB-L\fP | \fB--listfiles\fP \fIpackage\fP ...
+\fB\-L\fP | \fB\-\-listfiles\fP \fIpackage\fP ...
 List files installed to your system from \fBpackage\fP.
 However, note that files created by package-specific
 installation-scripts are not listed.
 .TP
-\fB-S\fP | \fB--search\fP \fIfilename-search-pattern\fP ...
+\fB\-S\fP | \fB\-\-search\fP \fIfilename-search-pattern\fP ...
 Search for a filename from installed packages. All standard shell
 wildchars can be used in the pattern.  This command will not list
 extra files created by maintainer scripts, nor will it list
 alternatives.
 .TP
-\fB-p\fP |\fB--print-avail\fP package
+\fB\-p\fP |\fB\-\-print\-avail\fP package
 Display details about \fIpackage\fP, as found in
 \fI/var/lib/dpkg/available\fP.
 .TP
-\fB--licence\fP | \fB--license\fP
+\fB\-\-licence\fP | \fB\-\-license\fP
 Display licence and copyright information.
 .TP
-\fB--version\fP
+\fB\-\-version\fP
 Display version information.
 
 .SH OPTIONS
 .TP
-\fB--admindir=\fIdir\fP
+\fB\-\-admindir=\fIdir\fP
 Change the location of the \fBdpkg\fR database. The default location is
 \fI/var/lib/dpkg\fP.
 .TP
-\fB--showformat=\fP\fIformat\fR
-This option is used to specify the format of the output \fB--show\fP
+\fB\-\-showformat=\fP\fIformat\fR
+This option is used to specify the format of the output \fB\-\-show\fP
 will produce.  The format is a string that will be output for each package
 listed. It can include the standard escape sequences \en (newline), \er
 (carriage return) or \e\e (plain backslash). Package information can be
@@ -73,7 +73,7 @@ width is negative in which case left alignment will be used.
 .SH ENVIRONMENT
 .TP
 \fBCOLUMNS\fP
-This setting influences the output of the \fB--list\fP option by changing
+This setting influences the output of the \fB\-\-list\fP option by changing
 the width of its output.
 
 .SH AUTHOR
