--- a/scripts/cleanup-info.8
+++ b/scripts/cleanup-info.8
@@ -1,12 +1,12 @@
-.TH CLEANUP-INFO 8 "November 1999" "Debian Project" "dpkg utilities"
+.TH CLEANUP\-INFO 8 "November 1999" "Debian Project" "dpkg utilities"
 .SH NAME
-cleanup-info \- clean up the mess that bogus install-info may have done
+cleanup\-info - clean up the mess that bogus install-info may have done
 .SH SYNOPSIS
-.B cleanup-info
-[--help] [--unsafe] [--version] [--] [\fI<dirname>\fP]
+.B cleanup\-info
+[\-\-help] [\-\-unsafe] [\-\-version] [\-\-] [\fI<dirname>\fP]
 .SH DESCRIPTION
-.B cleanup-info
-is a Perl script that tries to clean up the mess that bogus install-info may
+.B cleanup\-info
+is a Perl script that tries to clean up the mess that bogus install\-info may
 have done. It gathers all sections with the same heading into a single one.
 It tries to be smart about cases and trailing colon/spaces.
 .br
@@ -17,20 +17,20 @@ Order of sections is preserved (the first encountered section counts).
 Order of entries within a section is preserved.
 .sp
 Please be \fBextremely careful\fP when using this utility - it might
-not be 100% safe. cleanup-info tries to be careful with your info dir
+not be 100% safe. cleanup\-info tries to be careful with your info dir
 file, but only until it writes it. You should back the file up prior
 to using this.
 .SH OPTIONS
 .TP
-.I --help
+.I \-\-help
 Output the help screen and exit successfully.
 .TP
-.I --unsafe
+.I \-\-unsafe
 Set some additional possibly useful options.
 .br
-.B "Warning: the `--unsafe' option may garble an otherwise correct file!"
+.B "Warning: the `\-\-unsafe' option may garble an otherwise correct file!"
 .TP
-.I --version
+.I \-\-version
 Output version and exit successfully.
 .SH FILES
 .TP
@@ -39,7 +39,7 @@ The info directory file. The lock file is named the same, with ".lock" suffix.
 .SH BUGS
 Probably many.
 .SH SEE ALSO
-.BR install-info (8),
+.BR install\-info (8),
 .BR info (1).
 .SH AUTHOR
 Copyright (C) 1996 Kim-Minh Kaplan.
