--- a/scripts/dpkg-divert.8
+++ b/scripts/dpkg-divert.8
@@ -1,22 +1,22 @@
-.TH DPKG-DIVERT 8 "December 1999" "Debian Project" "dpkg utilities"
+.TH DPKG\-DIVERT 8 "December 1999" "Debian Project" "dpkg utilities"
 .SH NAME
-dpkg-divert -- override a package's version of a file
+dpkg\-divert - override a package's version of a file
 .SH SYNOPSIS
-.B dpkg-divert
-[options] [--add]
+.B dpkg\-divert
+[options] [\-\-add]
 .I <file>
 .br
-.B dpkg-divert
-[options] --remove
+.B dpkg\-divert
+[options] \-\-remove
 .I <file>
 .br
-.B dpkg-divert
+.B dpkg\-divert
 [options]
---list
+\-\-list
 .I <glob-pattern>
 .br
-.B dpkg-divert
-[options] --truename
+.B dpkg\-divert
+[options] \-\-truename
 .I <file>
 .br
 .SH DESCRIPTION
@@ -28,46 +28,46 @@ file, or whenever some files (which aren't marked as 'conffiles') need to be
 preserved by dpkg, when installing a newer version of a package which
 contains those files.
 .sp
-.B dpkg-divert
+.B dpkg\-divert
 is the utility used to set up and update the list of diversions. It
 functions in three basic modes - adding, removing, and listing diversions.
-The options are --add, --remove, and --list, respectively. Additionally,
+The options are \-\-add, \-\-remove, and \-\-list, respectively. Additionally,
 it can print out the real name for a diverted file. Other options
 (listed below) may also be specified.
 .SH OPTIONS
 .TP
-.I --admindir <directory>
+.I \-\-admindir <directory>
 Set the dpkg data directory to <directory> (default: /var/lib/dpkg).
 .TP
-.I --divert <divert-to>
+.I \-\-divert <divert-to>
 <divert-to> is the name used by other packages' versions.
 .TP
-.I --help
+.I \-\-help
 Output the version and the short usage instructions, and exit successfully.
 .TP
-.I --local
+.I \-\-local
 Specifies that all packages' versions are diverted.
 .TP
-.I --package <package>
+.I \-\-package <package>
 <package> is the name of a package whose copy of <file> will not be diverted.
 .TP
-.I --quiet
+.I \-\-quiet
 Quiet mode, i.e. no verbose output.
 .TP
-.I --rename
-Actually move the file aside (or back). dpkg-divert will abort operation
+.I \-\-rename
+Actually move the file aside (or back). dpkg\-divert will abort operation
 in case the destination file already exists.
 .TP
-.I --test
+.I \-\-test
 Test mode, i.e. don't actually perform any changes, just demonstrate.
 .TP
-.I --version
+.I \-\-version
 Output program name and version and exit successfully.
 .SH NOTES
-When adding, default is --local and --divert <original>.distrib.
-When removing, --package or --local and --divert must match if specified.
+When adding, default is \-\-local and \-\-divert <original>.distrib.
+When removing, \-\-package or \-\-local and \-\-divert must match if specified.
 
-Directories can't be diverted with dpkg-divert.
+Directories can't be diverted with dpkg\-divert.
 
 Care should be taken when diverting shared libraries, ldconfig (8) creates
 a symbolic link based on the DT_SONAME field embedded in the library.
@@ -81,13 +81,10 @@ File which contains the current list of diversions of the system. It is
 located in the dpkg administration directory, along with other files
 important to dpkg, such as `status' or `available'.
 .br
-Note: dpkg-divert preserves the old copy of this file, with extension
-"-old", before replacing it with the new one.
+Note: dpkg\-divert preserves the old copy of this file, with extension
+"\-old", before replacing it with the new one.
 .SH SEE ALSO
 .BR dpkg (8).
-.sp
-Please read the Debian Packaging Manual, section 11., "Diversions -
-overriding a package's version of a file" for more information.
 .SH AUTHOR
 Copyright (C) 1995 Ian Jackson.
 .sp
