--- a/scripts/dpkg-scanpackages.8
+++ b/scripts/dpkg-scanpackages.8
@@ -13,14 +13,14 @@
 .\" You should have received a copy of the GNU General Public
 .\" License along with dpkg; if not, write to the Free Software
 .\" Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
-.TH DPKG-SCANPACKAGES 8 "1996-07-08" "Debian project" "dpkg utilities"
+.TH DPKG\-SCANPACKAGES 8 "1996-07-08" "Debian project" "dpkg utilities"
 .SH NAME
-dpkg-scanpackages \- create Packages files
+dpkg\-scanpackages - create Packages files
 .
 .SH SYNOPSIS
-.B dpkg-scanpackages
-.RI [ -u ]
-.RI [ -a<arch> ]
+.B dpkg\-scanpackages
+.RI [ \-u ]
+.RI [ \-a<arch> ]
 .I binarydir
 .I overridefile
 .RI [ pathprefix ]
@@ -28,20 +28,20 @@ dpkg-scanpackages \- create Packages files
 .I Packages
 .
 .SH DESCRIPTION
-.B dpkg-scanpackages
+.B dpkg\-scanpackages
 sorts through a tree of Debian binary packages and creates a Packages
 file, used by
 .BR dselect (8),
 etc, to tell the user what packages are available for installation.  These
 Packages files are the same as those found on Debian archive sites
 and CD-ROMs.  You might use
-.B dpkg-scanpackages
+.B dpkg\-scanpackages
 yourself if making a directory of local packages to install on a cluster
 of machines.
 .PP
 .I binarydir
 is the name of the binary tree to process (for example,
-.BR contrib/binary-i386 ).
+.BR contrib/binary\-i386 ).
 It is best to make this relative to the root of the Debian archive,
 because every Filename field in the new Packages file will start with
 this string.
@@ -54,10 +54,10 @@ package fits into the distribution; see below.
 is an optional string to be prepended to the Filename fields.
 .PP
 If
-.I -u
+.I \-u
 is specified, then scan for *.udeb, instead of *.deb.
 .PP
-When -a\fI<arch>\fP is specified, then instead of scanning for all debs,
+When \-a\fI<arch>\fP is specified, then instead of scanning for all debs,
 a pattern consisting of *_all.deb and *_arch.deb is used.
 .
 .SH THE OVERRIDE FILE
@@ -105,7 +105,7 @@ in the
 directory on any Debian mirror.
 .
 .SH DIAGNOSTICS
-.B dpkg-scanpackages
+.B dpkg\-scanpackages
 outputs the usual self-explanatory errors.  It also warns about packages
 that are in the wrong subdirectory, are duplicated, have a Filename
 field in their control file, are missing from the override file, or have
@@ -114,4 +114,4 @@ maintainer substitutions which do not take effect.
 .SH SEE ALSO
 .BR dpkg (8),
 .BR dselect (8),
-.BR dpkg-scansources (8).
+.BR dpkg\-scansources (8).
