--- a/utils/md5sum.1
+++ b/utils/md5sum.1
@@ -5,7 +5,7 @@ md5sum \- generates or checks MD5 message digests
 
 .SH SYNOPSIS
 .B md5sum
-[-bv] [-c [file]] | [file...]
+[\-bv] [\-c [file]] | [file...]
 
 .SH DESCRIPTION
 .B md5sum
@@ -18,21 +18,21 @@ Normally
 .B md5sum
 generates checksums of all files given to it as a parameter and prints
 the checksums followed by the filenames. If, however,
-.B -c
+.B \-c
 is specified, only one filename parameter is allowed. This file should
 contain checksums and filenames to which these checksums refer to, and
 the files listed in that file are checked against the checksums listed
 there. See option
-.B -c
+.B \-c
 for more information.
 
 .SS OPTIONS
 .TP
-.B -b
+.B \-b
 Use binary mode. In unix environment, only difference between this and
 the normal mode is an asterix preceding the filename in the output.
 .TP
-.B -c
+.B \-c
 Check md5sum of all files listed in
 .I file
 against the checksum listed in the same file. The actual format of that
@@ -45,16 +45,16 @@ That is, each line in the file describes a file. A line looks like:
 So, for example, if a file was created and its message digest calculated
 like so:
 
-.B echo foo > md5-test-file; md5sum md5-test-file
+.B echo foo > md5\-test\-file; md5sum md5\-test\-file
 
 .B md5sum
 would report:
 
-.B d3b07384d113edec49eaa6238ad5ff00\  md5-test-file
+.B d3b07384d113edec49eaa6238ad5ff00\  md5\-test\-file
 
 .TP
-.B -v
-Be more verbose. Print filenames when checking (with -c).
+.B \-v
+Be more verbose. Print filenames when checking (with \-c).
 
 .SH BUGS
 The related MD4 message digest algorithm was broken in October 1995.
@@ -65,7 +65,7 @@ with other manpages.
 
 .B md5sum
 does not accept standard options like
-.BR --help .
+.BR \-\-help .
 
 .SH AUTHOR
 
