--- a/utils/start-stop-daemon.8
+++ b/utils/start-stop-daemon.8
@@ -2,105 +2,124 @@
 .SH NAME
 start\-stop\-daemon \- start and stop system daemon programs
 .SH SYNOPSIS
-.B start-stop-daemon
-.BR -S | --start
+.B start\-stop\-daemon
+.BR \-S | \-\-start
 .IR options
 .RB [ \-\- ]
 .IR arguments
 .HP
-.B start-stop-daemon
-.BR -K | --stop
+.B start\-stop\-daemon
+.BR \-K | \-\-stop
 .IR options
 .HP
-.B start-stop-daemon
-.BR -H | --help
+.B start\-stop\-daemon
+.BR \-H | \-\-help
 .HP
-.B start-stop-daemon
-.BR -V | --version
+.B start\-stop\-daemon
+.BR \-V | \-\-version
 .SH DESCRIPTION
 .B start\-stop\-daemon
 is used to control the creation and termination of system-level processes.
 Using the
-.BR --exec ", " --pidfile ", " --user ", and " --name " options,"
+.BR \-\-exec ", " \-\-pidfile ", " \-\-user ", and " \-\-name " options,"
 .B start\-stop\-daemon
 can be configured to find existing instances of a running process.
 
 With
-.BR --start ,
+.BR \-\-start ,
 .B start\-stop\-daemon
 checks for the existence of a specified process.
 If such a process exists,
 .B start\-stop\-daemon
 does nothing, and exits with error status 1 (0 if
-.BR --oknodo
+.BR \-\-oknodo
 is specified).  
 If such a process does not exist, it starts an
 instance, using either the executable specified by
-.BR --exec ,
+.BR \-\-exec ,
 (or, if specified, by
-.BR --startas ).
+.BR \-\-startas ).
 Any arguments given after
-.BR --
+.BR \-\-
 on the command line are passed unmodified to the program being
 started.
 
 With 
-.BR --stop ,
+.BR \-\-stop ,
 .B start\-stop\-daemon
 also checks for the existence of a specified process.
 If such a process exists,
 .B start\-stop\-daemon
 sends it the signal specified by
-.BR --signal ,
+.BR \-\-signal ,
 and exits with error status 0.
 If such a process does not exist,
 .B start\-stop\-daemon
 exits with error status 1
 (0 if
-.BR --oknodo
+.BR \-\-oknodo
 is specified).  If
-.B --retry
+.B \-\-retry
 is specified then 
-.B start-stop-daemon
+.B start\-stop\-daemon
 will check that the process(es) have terminated.
+
+Note that unless
+.BR \-\-pidfile ,
+is specified, then
+.B start\-stop\-daemon
+behaves similarly to
+.B killall(1).
+.B start\-stop\-daemon
+will scan the process table looking for any processes which
+match the process name, uid, and/or gid (if specified).  Any
+matching process will prevent
+.BR \-\-start
+from starting the daemon.  All matching processes will be
+sent the KILL signal if
+.BR \-\-stop
+is specified.  For daemons which have long-lived children
+which need to live through a
+.BR \-\-stop
+you must specify a pidfile.
 
 .SH OPTIONS
 
 .TP
-\fB-x\fP|\fB--exec\fP \fIexecutable\fP
+\fB\-x\fP|\fB\-\-exec\fP \fIexecutable\fP
 Check for processes that are instances of this executable (according to 
 .B /proc/\fIpid\fB/exe\fP
 ).
 .TP
-\fB-p\fP|\fB--pidfile\fP \fIpid-file\fP
-Check for processes whose process-id is specified in 
+\fB\-p\fP|\fB\-\-pidfile\fP \fIpid-file\fP
+Check whether a process has created the file
 .IR pid-file .
 .TP
-\fB-u\fP|\fB--user\fP \fIusername\fP|\fIuid\fP
+\fB\-u\fP|\fB\-\-user\fP \fIusername\fP|\fIuid\fP
 Check for processes owned by the user specified by
 .I username 
 or
 .IR uid .
 .TP
-\fB-g\fP|\fB--group\fP \fIgroup\fP|\fIgid\fP
+\fB\-g\fP|\fB\-\-group\fP \fIgroup\fP|\fIgid\fP
 Change to \fIgroup\fP or \fIgid\fP when starting the process.
 .TP
-\fB-n\fP|\fB--name\fP \fIprocess-name\fP
+\fB\-n\fP|\fB\-\-name\fP \fIprocess-name\fP
 Check for processes with the name
 .I process-name
 (according to
 .BR /proc/\fIpid\fB/stat\fP ).
 .TP
-\fB-s\fP|\fB--signal\fP \fIsignal\fP
+\fB\-s\fP|\fB\-\-signal\fP \fIsignal\fP
 With
-.BR --stop ,
+.BR \-\-stop ,
 specifies the signal to send to processes being stopped (default 15).
 .TP
-\fB-R\fP|\fB--retry\fP \fItimeout\fP|\fIschedule\fP
+\fB\-R\fP|\fB\-\-retry\fP \fItimeout\fP|\fIschedule\fP
 With
-.BR --stop ,
+.BR \-\-stop ,
 specifies that
-.B start-stop-daemon
+.B start\-stop\-daemon
 is to check whether the process(es)
 do finish.  It will check repeatedly whether any matching processes
 are running, until none are.  If the processes do not exit it will
@@ -115,13 +134,13 @@ then the schedule
 is used, where
 .I signal
 is the signal specified with
-.BR --signal .
+.BR \-\-signal .
 
 .I schedule
 is a list of at least two items separated by slashes
 .RB ( / );
 each item may be
-.BI - signal-number
+.BI \- signal-number
 or [\fB\-\fP]\fIsignal-name\fP,
 which means to send that signal,
 or
@@ -136,32 +155,32 @@ necessary.
 If the end of the schedule is reached and
 .BR forever
 is not specified, then
-.B start-stop-daemon
+.B start\-stop\-daemon
 exits with error status 2.
 If a schedule is specified, then any signal specified
 with
-.B --signal
+.B \-\-signal
 is ignored.
 .TP
-\fB-a\fP|\fB--startas\fP \fIpathname\fP
+\fB\-a\fP|\fB\-\-startas\fP \fIpathname\fP
 With 
-.BR --start ,
+.BR \-\-start ,
 start the process specified by 
 .IR pathname .
 If not specified, defaults to the argument given to
-.BR --exec .
+.BR \-\-exec .
 .TP
-.BR -t | --test
+.BR \-t | \-\-test
 Print actions that would be taken and set appropriate return value,
 but take no action.
 .TP
-.BR -o | --oknodo
+.BR \-o | \-\-oknodo
 Return exit status 0 instead of 1 if no actions are (would be) taken.
 .TP
-.BR -q | --quiet
+.BR \-q | \-\-quiet
 Do not print informational messages; only display error messages.
 .TP
-\fB-c\fP|\fB--chuid\fP \fIusername\fR|\fIuid\fP
+\fB\-c\fP|\fB\-\-chuid\fP \fIusername\fR|\fIuid\fP
 Change to this username/uid before starting the process. You can also
 specify a group by appending a
 .BR : ,
@@ -170,63 +189,65 @@ as you would for the `chown' command (\fIuser\fP\fB:\fP\fIgroup\fP).
 When using this option
 you must realize that the primary and supplemental groups are set as well,
 even if the
-.B --group
+.B \-\-group
 option is not specified.  The
-.B --group
+.B \-\-group
 option is only for
 groups that the user isn't normally a member of (like adding per/process
 group membership for generic users like
 .BR nobody ).
 .TP
-\fB-r\fP|\fB--chroot\fP \fIroot\fP
+\fB\-r\fP|\fB\-\-chroot\fP \fIroot\fP
 Chdir and chroot to
 .I root
 before starting the process. Please note that the pidfile is also written
 after the chroot.
 .TP
-\fB-d\fP|\fB--chdir\fP \fIpath\fP
+\fB\-d\fP|\fB\-\-chdir\fP \fIpath\fP
 Chdir to
 .I path
 before starting the process. This is done after the chroot if the
-\fB-r\fP|\fB--chroot\fP option is set.
+\fB\-r\fP|\fB\-\-chroot\fP option is set.  When not specified,
+start\-stop\-daemon will chdir to the root directory before starting
+the process.
 .TP
-.BR -b | --background
+.BR \-b | \-\-background
 Typically used with programs that don't detach on their own. This option
 will force
-.B start-stop-daemon
+.B start\-stop\-daemon
 to fork before starting the process, and force it into the background.
-.B WARNING: start-stop-daemon
+.B WARNING: start\-stop\-daemon
 cannot check the exit status if the process fails to execute for
 .B any
 reason. This is a last resort, and is only meant for programs that either
 make no sense forking on their own, or where it's not feasible to add the
 code for it to do this itself.
 .TP
-\fB-N\fP|\fB--nicelevel\fP \fIint\fP 
+\fB\-N\fP|\fB\-\-nicelevel\fP \fIint\fP 
 This alters the prority of the process before starting it.
 .TP
-.BR -m | --make-pidfile
+.BR \-m | \-\-make\-pidfile
 Used when starting a program that does not create its own pid file. This
 option will make
-.B start-stop-daemon
+.B start\-stop\-daemon
 create the file referenced with
-.B --pidfile
+.B \-\-pidfile
 and place the pid into it just before executing the process. Note, it will
 not be removed when stopping the program.
 .B NOTE:
 This feature may not work in all cases. Most notably when the program
 being executed forks from its main process. Because of this it is usually
 only useful when combined with the
-.B --background
+.B \-\-background
 option.
 .TP
-.BR -v | --verbose
+.BR \-v | \-\-verbose
 Print verbose informational messages.
 .TP
-.BR -H | --help
+.BR \-H | \-\-help
 Print help information; then exit.
 .TP
-.BR -V | --version
+.BR \-V | \-\-version
 Print version information; then exit.
 
 .SH AUTHORS
