Correct Makefile bug that prevents installation if --without-sgml-doc is passed.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri May 7 04:46:01 BST 2004 Scott James Remnant <scott@netsplit.com>
+
+  * doc/Makefile.in: Ensure that $(docdir) exists before attempting
+  to install the ChangeLog there.
+
 Fri May 7 01:21:49 BST 2004 Scott James Remnant <scott@netsplit.com>
 
   * dselect/pkginfo.cc: Replace &c. with the slightly clearer etc.
