--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,8 @@ dpkg (1.10.22) unstable; urgency=low
   * Add support for DOS line-endings to md5sum.  Closes: #246103.
   * Remove restriction that package names be at least two characters long.
     Closes: #237734.
+  * Create $(docdir) even when --without-sgml-doc is passed so the
+    ChangeLog can be installed.  Closes: #137719.
   * Correct 'n' and 'p' key descriptions in dselect help message.
     Closes: #120562.
   * Stop hardcoding the list of manual page languages in debian/rules,
